ConfigMap and secret.yaml
From Literal Value
==================
kubectl create configmap cus-conf --from-literal=KEY1=Value1 --from-literal=KEY2=Value2

apiVersion: v1
kind: Pod
metadata:
 name: configmap-demo-pod
spec:
 containers:
 - name: demo
 image: alpine
 command: ["sleep", "3600"]
From file
=========
kubectl create configmap cus-conf --from-file=/path/to/config-map.txt
kubectl create configmap cus-conf --from-file=/path/to/Directory

Config Map Declarative Way
==========================

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tableau-bridge
  labels:
    app: bridge
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: bridge
  template:
    metadata:
      labels:
        app: bridge
    spec:
      volumes:
      - name: kishore
        secret:
          secretName: tableau-secret
      containers:
      - name: tableau-bridge
        image: krishnakishore27/tableau-bridge:latest
        ports:
        - containerPort: 80
        command: ['sh', '-c', '/opt/tableau/tableau_bridge/bin/TabBridgeClientWorker -e --patTokenId="kishore" --userEmail="krishnakishore.reddy@salesforce.com" --client="Kishorek8sSecretAgent" --site="krishnakishorereddy" --patTokenFile="/mnt/file.txt" --poolId="dc372dc4-801e-4025-b98e-a83051e4884d" && tail -f /dev/null ']
        volumeMounts:
        - name: kishore
          mountPath: /mnt
