ConfigMap.yaml
From Literal Value
==================
kubectl create configmap cus-conf --from-literal=KEY1=Value1 --from-literal=KEY2=Value2

apiVersion: v1
kind: Pod
metadata:
 name: configmap-demo-pod
spec:
 containers:
 - name: demo
 image: alpine
 command: ["sleep", "3600"]
From file
=========
kubectl create configmap cus-conf --from-file=/path/to/config-map.txt
kubectl create configmap cus-conf --from-file=/path/to/Directory

Config Map Declarative Way
==========================
