Tableau-Bridge-Deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: tableau-bridge
  labels:
    app: bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tableau-bridge
  template:
    metadata:
      labels:
        app: tableau-bridge
    spec:
      containers:
      - name: tableau
        image: krishnakishore27/tableau-bridge:latest
        command: ['sh', '-c', '/opt/tableau/tableau_bridge/bin/TabBridgeClientWorker -e --patTokenId="kishore" --userEmail="krishnakishore.reddy@salesforce.com" --client="Kishorek8sBridgeAgent" --site="krishnakishorereddy" --patTokenFile="/mnt/file.txt" --poolId="dc372dc4-801e-4025-b98e-a83051e4884d" && tail -f /dev/null ']
        volumeMounts:
        - name: bridge
          mountPath: /mnt
      volumes:
      - name: bridge
        hostPath:
          path: /tmp/bridge
          type: DirectoryOrCreate
