Volumes.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: nginx-volume
  labels:
    app: nginx
spec:
  volumes:
  - name: nginxvolume
    hostPath:
      path: /opt/nginx
      type: Directory
  containers: 
    name: nginx-pod
    image: nginx 
    volumeMounts:
      - name:  nginxvolume
        mountPath: /opt

---
apiVersion: v1
kind: Pod
metadata:
  name: emptydir
  labels:
    app: nginx
spec:
  volumes:
  - name: emptydir
    emptyDir: {]
  containers:
  - name: nginx-emptydir
    image: nginx:latest
    command: ['/bin/bash']
    args: ['-c', 'echo "Hola"']
    volumeMounts:
    - name: emptydir
      mountPath: /usr/share/nginx/html
---

apiVersion: v1
kind: Pod
metadata:
  name: tableau-volume
  labels:
    app: tableau
spec:
  containers:
    - name: tableau
      image: krishnakishore27/tableau:tableau-server-2023.3.2
      volumeMounts:
        - name:  tableau-volume
          mountPath: /srv
  volumes:
    - name: tableau-volume   # same as the name of volumemounts
      hostPath:
        path:  /root/kishore
        type: directory
      persistentVolumeClaim:
      claimName: mypvc

---

apiVersion: v1
kind: Pod
metadata:
  name: tableau-volume
  labels:
    app: tableau
spec:
  containers:
    - name: tableau
      image: krishnakishore27/tableau:tableau-server-2023.3.2
      volumeMounts:
        - name:  tableau-volume
          mountPath: /srv
  volumes:
    - name: tableau-volume   # same as the name of volumemounts
      PersistentVolumeClaim:
        claimName: mypvc  #It should match the PersistentVolumeClaim name in metadata

---

apiVersion: v1
kind: Pod
spec:
  name: security-context
  labels:
    app: tableau
  containers:
    - name: tableau-server
      image: krishnakishore27/tableau:tableau-server-2023.3.2
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000


---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tableau-server
spec:
  serviceName: tableau-service
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: tableauserver
        image: krishnakishore27/tableau:tableau-server-2023.3.2
        volumeMounts:
            - name: myvolume
              mountPath: /opt/tableau/tableau_server
      volumes:
        - name:  myvolume
          persistentVolumeClaim:
            claimName: mypvc
