HeadLess-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-svc
spec:
  selector:
    app: nginx 
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
  type: NodePort
