service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    run: nginx
  ports:
  - port: 80
    protocol: TCP
    name: httpd
---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  selector:
    run: nginx
  ports:
  - port: 8080
    protocol: TCP
    name: http
